<resources>
    <string name="app_name">My Wallet</string>
    <string name="txt_login">Iniciar Sesión</string>
    <string name="txt_sing_up">Registrarse</string>
    <string name="txt_email_login">Correo Electronico</string>
    <string name="txt_pass">Contraseña</string>
    <string name="txt_iniciar_sesion_google">Iniciar Sesion Google</string>
    <string name="txt_register">REGISTER</string>
    <string name="txt_complete_name">Nombre Completo</string>
</resources>