<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="user"
            type="com.fabiansuarez.mywallet.User" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".RegisterActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/shape_login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent=".2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/app_name"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="310dp"
            android:layout_height="635dp"
            app:cardCornerRadius="40dp"
            app:cardElevation="100dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent=".6"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/constraintLayout"
            app:layout_constraintVertical_bias="0.7"
            app:layout_constraintWidth_percent=".9">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintWidth_percent=".8">

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <EditText
                            android:id="@+id/et_name_register"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="30dp"
                            android:background="@drawable/shape_et_login"
                            android:ems="10"
                            android:hint="@string/txt_complete_name"
                            android:inputType="textEmailAddress"
                            android:padding="10dp"
                            android:text="@={user.name}"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/textView"
                            app:layout_constraintWidth_percent="0.8" />

                        <EditText
                            android:id="@+id/et_email"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="30dp"
                            android:background="@drawable/shape_et_login"
                            android:ems="10"
                            android:hint="@string/txt_email_login"
                            android:inputType="textEmailAddress"
                            android:padding="10dp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/et_name_register"
                            app:layout_constraintWidth_percent="0.8" />

                        <EditText
                            android:id="@+id/et_pass"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="25dp"
                            android:background="@drawable/shape_et_login"
                            android:ems="10"
                            android:hint="@string/txt_pass"
                            android:inputType="numberPassword"
                            android:padding="10dp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/et_email"
                            app:layout_constraintWidth_percent="0.8" />

                        <Button
                            android:id="@+id/btn_register"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="25dp"
                            android:background="@drawable/shape_btn_primary"
                            android:text="@string/txt_sing_up"
                            android:textColor="@color/white"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/et_pass"
                            app:layout_constraintWidth_percent="0.5" />

                        <TextView
                            android:id="@+id/textView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="25dp"
                            android:gravity="center"
                            android:text="@string/txt_register"
                            android:textColor="@color/primary_color"
                            android:textSize="25sp"
                            android:textStyle="bold"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />


                    </androidx.constraintlayout.widget.ConstraintLayout>

                </ScrollView>


            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>